<resources>
    <!--From sliding bar-->
    <string name="properties">SlidingMenu Properties</string>
    <string name="general">General</string>
    <string name="viewpager">ViewPager</string>
    <string name="attach">Attach</string>
    <string name="title_bar">Title Bar Options</string>
    <string name="title_bar_slide">Sliding Title Bar</string>
    <string name="title_bar_content">Sliding Content Only</string>
    <string name="animations">Custom Animations</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_and_right">Left and Right</string>
    <string name="github">GitHub</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    <string name="what_is_this">What is this?</string>
    <string name="responsive_explanation">This is an example of a UI that responds well to device type. On phones, the menu will be placed inside a SlidingMenu, while on tablets the menu will be exposed alongside the content because we have enough room to always show it.</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="contact">Contact</string>
    <string name="about_msg">&lt;b>SlidingMenu&lt;/b> is an Open Source Android library
        that allows developers to easily create applications with sliding menus like those
        made popular in the Google+, YouTube, and Facebook applications.
        You can find it on GitHub by clicking the little octocat icon in the ActionBar.
        Feel free to use it all you want in your Android apps provided
        that you cite this project and include the license in your app.
        &lt;br>&lt;br>
		SlidingMenu is currently used in some incredibly popular Android
		apps such as Zappos, Plume, VLC for Android, and The Verge.
		If you are using SlidingMenu in your app and would like to be
		listed here, please let me know via Twitter (@slidingmenu)!</string>
    <string name="apache_license">&lt;b>SlidingMenu &lt;/b>&lt;br>
        \u00A9 2012 Jeremy Feinstein&lt;br>
        SlidingMenu is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
        &lt;b>ActionBarSherlock &lt;/b>&lt;br>
        \u00A9 2012 Jake Wharton&lt;br>
        ActionBarSherlock is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
		&lt;b>The Apache License Version 2.0&lt;/b>&lt;br>
		You may obtain a copy of the License at&lt;br>
		&lt;center>&lt;a href=\'http://www.apache.org/licenses/LICENSE-2.0\'>
				"http://www.apache.org/licenses/LICENSE-2.0&lt;/a>&lt;/center>&lt;br>
		Unless required by applicable law or agreed to in writing,
		software distributed under the License is distributed on an
		\'AS IS\' BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
		either express or implied. See the License for the specific
		language governing permissions and limitations under the License.</string>
    <string name="no_email">Sorry, I couldn\'t find any e-mail apps on your phone</string>


    <string name="app_name">Batda</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="myharavan">.myharavan.com</string>
    <string name="Ban_dong_y"><a href = "http://google.com">Bạn đồng ý với điều khoảng sử dụng </a>của <a href ="">Haravan</a> khi quyết định đăng ký tài khoản.</string>
    <string name="copyright">\u00a9 Haravan - Developed by Batda.com </string>
    <string name="register">ĐĂNG KÝ</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="email">Email</string>
    <string name="pasword">mật khẩu</string>
    <string name="sub_domain">tên miền phụ</string>
    <string name="not_register">nếu bạn chưa có tài khoản</string>
    <string name="or">hoặc</string>
    <string name="chat">chat</string>
    <string name="notification">thông báo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">tìm kiếm</string>
    <string name="today">Hôm nay</string>
    <string name="yesterday">Hôm qua</string>
    <string name="seven_days">7 ngày</string>
    <string name="thirty_days">30 ngày</string>
    <string name="ninety_days">90 ngày</string>
    <string name="new_orders">DH Mới</string>
    <string name="waiting_shopping_cart">Giỏ hàng chờ</string>
    <string name="support">Hỗ trợ: 19006449</string>
    <string name="lorum_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.fdspnndd dksljm dakn sal sbak sakn ssjkdjweæw kjisaldnasndbd</string>
    <string name="temporary_calculation">Tạm tính:</string>
    <string name="discount">Giảm giá:</string>
    <string name="shipping_cost">Phí vận chuyển (COD):</string>
    <string name="demo_price">0.00000 đ</string>
    <string name="sum">Tổng tiền:</string>
    <string name="delivery">Giao hàng</string>
    <string name="pay">Thanh toán</string>
    <string name="status">Tình trạng</string>
    <string name="confirm">Xác nhận</string>
    <string name="cancel">Hủy HD</string>
    <string name="demo_date">15/12-03:30 PM</string>
    <string name="demo_description">Kem tri nam, tan nhang</string>
    <string name="demo_product_code">#3294792</string>
    <string name="demo_city">Ho Chi Minh</string>
    <string name="demo_customer_name">Hoang Thi Than Thuong</string>

</resources>
