<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/lv_background"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/txtTemporarySum_FooterChildView"
        android:layout_marginTop="@dimen/value_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/demo_price"/>
    <TextView
        android:id="@+id/txtTemporarySumLabel_FooterChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temporary_calculation"
        android:layout_marginRight="@dimen/value_100"
        android:layout_toLeftOf="@+id/txtTemporarySum_FooterChildView"
        android:layout_alignBottom="@+id/txtTemporarySum_FooterChildView"/>
    <TextView
        android:id="@+id/txtDiscountLabel_FooterChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTemporarySumLabel_FooterChildView"
        android:text="@string/discount"
        android:layout_alignRight="@+id/txtTemporarySumLabel_FooterChildView"/>
    <TextView
        android:id="@+id/txtDiscount_FooterChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTemporarySumLabel_FooterChildView"
        android:text="@string/demo_price"
        android:layout_alignRight="@+id/txtTemporarySum_FooterChildView"/>
    <TextView
        android:id="@+id/txtShippingCostLabel_FooterChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDiscountLabel_FooterChildView"
        android:layout_alignRight="@id/txtTemporarySumLabel_FooterChildView"
        android:text="@string/shipping_cost"/>
    <TextView
        android:id="@+id/txtShippingCost_FooterChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDiscount_FooterChildView"
        android:layout_alignRight="@+id/txtTemporarySum_FooterChildView"
        android:text="@string/demo_price"/>
    <View
        android:id="@+id/vLine2_FooterChildView"
        android:layout_width="match_parent"
        android:layout_below="@id/txtShippingCostLabel_FooterChildView"
        android:layout_height="@dimen/value_2"
        android:background="@drawable/dotted_line"
        android:layout_marginTop="@dimen/value_10"
        android:layout_marginBottom="@dimen/value_10"
        android:layout_marginLeft="@dimen/value_60"/>
    <TextView
        android:id="@+id/txtSumLabel_FooterChildView"
        android:layout_below="@id/vLine2_FooterChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:layout_alignRight="@+id/txtTemporarySumLabel_FooterChildView"/>
    <TextView
        android:id="@+id/txtSum_FooterChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vLine2_FooterChildView"
        android:layout_alignRight="@+id/txtTemporarySum_FooterChildView"
        android:text="@string/demo_price"/>

    <TextView
        android:id="@+id/txtDescription_FooterChildView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_10"
        android:background="@drawable/rectangle_white"
        android:layout_below="@id/txtSum_FooterChildView"
        android:text="@string/lorum_ipsum"/>
    <LinearLayout
        android:id="@+id/lo3_FooterChildView"
        android:layout_marginTop="@dimen/value_10"
        android:layout_below="@+id/txtDescription_FooterChildView"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:divider="@drawable/space_medium"
        android:showDividers="middle"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delivery"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pay"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/status"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/value_10"
        android:layout_below="@+id/lo3_FooterChildView"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:divider="@drawable/space_medium"
        android:showDividers="middle">
        <Button
            android:id="@+id/btnDeliveryConfirm_FooterChildView"
            android:background="@color/green"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm"/>
        <Button
            android:id="@+id/btnPayConfirm_FooterChildView"
            android:layout_width="0dp"
            android:background="@color/blue"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm"/>
        <Button
            android:id="@+id/btnStatus"
            android:layout_width="0dp"
            android:background="@color/red"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"/>
    </LinearLayout>
</RelativeLayout>
