<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/value_10"
    android:paddingRight="@dimen/value_10"
    tools:context="fragment.DashboardFragment">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                style="@style/Button_Day"
                android:text="@string/today"/>
            <TextView
                style="@style/Button_Day"
                android:text="@string/yesterday"/>
            <TextView
                style="@style/Button_Day"
                android:text="@string/seven_days"/>
            <TextView
                style="@style/Button_Day"
                android:text="@string/thirty_days"/>
            <TextView
                style="@style/Button_Day"
                android:text="@string/ninety_days"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/item_horizontal"
                        android:gravity="left"
                        android:text="abc"/>
                    <TextView
                        style="@style/item_horizontal"
                        android:gravity="left"
                        android:text="abc"/>
                    <TextView
                        style="@style/item_horizontal"
                        android:gravity="left"
                        android:text="abc"/>
                </LinearLayout>
                <include
                    android:id="@+id/firstCommon_Dashboard"
                    layout="@layout/common_row"></include>

                <android.support.v4.view.ViewPager
                    android:id="@+id/vg1_Dashboard"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/value_260"
                    ></android.support.v4.view.ViewPager>
                <include android:id="@+id/secondCommon_Dashboard"
                    layout="@layout/common_row"></include>

                <android.support.v4.view.ViewPager
                    android:id="@+id/vg2_Dashboard"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/value_260"
                    ></android.support.v4.view.ViewPager>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright"/>
</RelativeLayout>
