<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTemporarySum_ChildView"
        android:layout_marginTop="@dimen/value_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lvDetail_ChildView"
        android:text="@string/demo_price"/>
    <TextView
        android:id="@+id/txtTemporarySumLabel_ChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temporary_calculation"
        android:layout_marginRight="@dimen/value_100"
        android:layout_toLeftOf="@+id/txtTemporarySum_ChildView"
        android:layout_alignBottom="@+id/txtTemporarySum_ChildView"/>
    <TextView
        android:id="@+id/txtDiscountLabel_ChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTemporarySumLabel_ChildView"
        android:text="@string/discount"
        android:layout_alignRight="@+id/txtTemporarySumLabel_ChildView"/>
    <TextView
        android:id="@+id/txtDiscount_ChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTemporarySumLabel_ChildView"
        android:text="@string/demo_price"
        android:layout_alignRight="@+id/txtTemporarySum_ChildView"/>
    <TextView
        android:id="@+id/txtShippingCostLabel_ChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDiscountLabel_ChildView"
        android:layout_alignRight="@id/txtTemporarySumLabel_ChildView"
        android:text="@string/shipping_cost"/>
    <TextView
        android:id="@+id/txtShippingCost_ChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDiscount_ChildView"
        android:layout_alignRight="@+id/txtTemporarySum_ChildView"
        android:text="@string/demo_price"/>
    <View
        android:id="@+id/vLine2_ChildView"
        android:layout_width="match_parent"
        android:layout_below="@id/txtShippingCostLabel_ChildView"
        android:layout_height="@dimen/value_2"
        android:background="@drawable/dotted_line"
        android:layout_marginTop="@dimen/value_10"
        android:layout_marginBottom="@dimen/value_10"
        android:layout_marginLeft="@dimen/value_60"/>
    <TextView
        android:id="@+id/txtSumLabel_ChildView"
        android:layout_below="@id/vLine2_ChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:layout_alignRight="@+id/txtTemporarySumLabel_ChildView"/>
    <TextView
        android:id="@+id/txtSum_ChildView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vLine2_ChildView"
        android:layout_alignRight="@+id/txtTemporarySum_ChildView"
        android:text="@string/demo_price"/>

</RelativeLayout>
