<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/iv_RowItemOrdersDetails"
        android:layout_width="@dimen/value_50"
        android:layout_height="@dimen/value_50"
        android:layout_marginRight="@dimen/value_10"
        android:src="@drawable/eagle"
        />
    <TextView
        android:id="@+id/txtName_RowItemOrdersDetails"
        android:layout_toRightOf="@+id/iv_RowItemOrdersDetails"
        android:layout_toLeftOf="@+id/txtTime_RowItemOrdersDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_customer_name"/>
    <TextView
        android:id="@+id/txtCity_RowItemOrdersDetails"
        android:layout_alignLeft="@+id/txtName_RowItemOrdersDetails"
        android:layout_toLeftOf="@+id/txtPrice_RowItemOrdersDetails"
        android:layout_below="@+id/txtName_RowItemOrdersDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_city"/>

    <TextView
        android:id="@+id/txtTime_RowItemOrdersDetails"
        android:layout_toLeftOf="@+id/ivExpandIcon_RowItemOrdersDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_date"/>
    <TextView
        android:id="@+id/txtPrice_RowItemOrdersDetails"
        android:layout_below="@+id/txtTime_RowItemOrdersDetails"
        android:layout_toLeftOf="@+id/ivExpandIcon_RowItemOrdersDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_price"/>

    <ImageView
        android:id="@+id/ivExpandIcon_RowItemOrdersDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_action_next_item"/>

    <View
        android:id="@+id/vLine_RowItemOrdersDetails"
        android:layout_below="@+id/ivExpandIcon_RowItemOrdersDetails"
        android:layout_marginTop="@dimen/value_10"
        android:layout_marginBottom="@dimen/value_10"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="1dp"></View>

    <RelativeLayout
        android:id="@+id/rlo_ChildView"
        android:layout_below="@+id/vLine_RowItemOrdersDetails"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivSMS_ChildView"
            android:layout_width="@dimen/value_50"
            android:layout_height="@dimen/value_50"
            android:layout_marginLeft="@dimen/value_60"
            android:src="@drawable/eagle"/>
        <TextView
            android:id="@+id/txtPhoneNumber_ChildView"
            android:layout_toRightOf="@id/ivSMS_ChildView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_10"
            android:layout_marginRight="@dimen/value_10"
            android:text="012356"/>
        <ImageView
            android:id="@+id/ivCall_ChildView"
            android:layout_width="@dimen/value_50"
            android:layout_height="@dimen/value_50"
            android:src="@drawable/eagle"
            android:layout_toRightOf="@+id/txtPhoneNumber_ChildView"/>

        <TextView
            android:id="@+id/txtEmail_ChildView"
            android:layout_below="@+id/ivSMS_ChildView"
            android:layout_alignLeft="@id/ivSMS_ChildView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <TextView
            android:id="@+id/txtAddress_ChildView"
            android:layout_below="@+id/txtEmail_ChildView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ivSMS_ChildView"
            android:text="Address"/>
        <View
            android:id="@+id/vLine_ChidView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_below="@id/txtAddress_ChildView"></View>
        <RelativeLayout
            android:id="@+id/lo_ChildView"
            android:layout_below="@+id/vLine_ChidView"
            android:background="@color/lv_background"
            android:layout_marginBottom="@dimen/value_10"
            android:layout_marginTop="@dimen/value_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ListView
                android:id="@+id/lvDetail_ChildView"
                android:layout_width="match_parent"
                android:divider="@null"
                android:layout_height="wrap_content"></ListView>

            <!--<TextView-->
                <!--android:id="@+id/txtTemporarySum_ChildView"-->
                <!--android:layout_marginTop="@dimen/value_10"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_below="@+id/lvDetail_ChildView"-->
                <!--android:text="@string/demo_price"/>-->
            <!--<TextView-->
                <!--android:id="@+id/txtTemporarySumLabel_ChildView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/temporary_calculation"-->
                <!--android:layout_marginRight="@dimen/value_100"-->
                <!--android:layout_toLeftOf="@+id/txtTemporarySum_ChildView"-->
                <!--android:layout_alignBottom="@+id/txtTemporarySum_ChildView"/>-->
            <!--<TextView-->
                <!--android:id="@+id/txtDiscountLabel_ChildView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@id/txtTemporarySumLabel_ChildView"-->
                <!--android:text="@string/discount"-->
                <!--android:layout_alignRight="@+id/txtTemporarySumLabel_ChildView"/>-->
            <!--<TextView-->
                <!--android:id="@+id/txtDiscount_ChildView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@id/txtTemporarySumLabel_ChildView"-->
                <!--android:text="@string/demo_price"-->
                <!--android:layout_alignRight="@+id/txtTemporarySum_ChildView"/>-->
            <!--<TextView-->
                <!--android:id="@+id/txtShippingCostLabel_ChildView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@id/txtDiscountLabel_ChildView"-->
                <!--android:layout_alignRight="@id/txtTemporarySumLabel_ChildView"-->
                <!--android:text="@string/shipping_cost"/>-->
            <!--<TextView-->
                <!--android:id="@+id/txtShippingCost_ChildView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@id/txtDiscount_ChildView"-->
                <!--android:layout_alignRight="@+id/txtTemporarySum_ChildView"-->
                <!--android:text="@string/demo_price"/>-->
            <!--<View-->
                <!--android:id="@+id/vLine2_ChildView"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_below="@id/txtShippingCostLabel_ChildView"-->
                <!--android:layout_height="@dimen/value_2"-->
                <!--android:background="@drawable/dotted_line"-->
                <!--android:layout_marginTop="@dimen/value_10"-->
                <!--android:layout_marginBottom="@dimen/value_10"-->
                <!--android:layout_marginLeft="@dimen/value_60"/>-->
            <!--<TextView-->
                <!--android:id="@+id/txtSumLabel_ChildView"-->
                <!--android:layout_below="@id/vLine2_ChildView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/sum"-->
                <!--android:layout_alignRight="@+id/txtTemporarySumLabel_ChildView"/>-->
            <!--<TextView-->
                <!--android:id="@+id/txtSum_ChildView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/vLine2_ChildView"-->
                <!--android:layout_alignRight="@+id/txtTemporarySum_ChildView"-->
                <!--android:text="@string/demo_price"/>-->

            <TextView
                android:id="@+id/txtDescription_ChildView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_10"
                android:background="@drawable/rectangle_white"
                android:layout_below="@id/lvDetail_ChildView"
                android:text="@string/lorum_ipsum"/>
            <LinearLayout
                android:id="@+id/lo3_ChildView"
                android:layout_marginTop="@dimen/value_10"
                android:layout_below="@+id/txtDescription_ChildView"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:divider="@drawable/space_medium"
                android:showDividers="middle"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/delivery"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/pay"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/status"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/value_10"
                android:layout_below="@+id/lo3_ChildView"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:divider="@drawable/space_medium"
                android:showDividers="middle">
                <Button
                    android:id="@+id/btnDeliveryConfirm_ChildView"
                    android:background="@color/green"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/confirm"/>
                <Button
                    android:id="@+id/btnPayConfirm_ChildView"
                    android:layout_width="0dp"
                    android:background="@color/blue"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/confirm"/>
                <Button
                    android:id="@+id/btnStatus"
                    android:layout_width="0dp"
                    android:background="@color/red"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cancel"/>
            </LinearLayout>
        </RelativeLayout>



    </RelativeLayout>



    <!--<include android:id="@+id/rloChild_RowItemOrdersDetails"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/vLine_RowItemOrdersDetails"-->
        <!--layout="@layout/childview_ordersdetails"></include>-->

</RelativeLayout>
